[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "4.2.7", features = ["cargo"] }
serde = { version = "1.0.130", features = ["derive"] }
directories = "5.0.1"
dotenv = "0.15.0"
csv = "1.1.6"
